@@ -1,3 +1,10 @@
+2016-03-09  Richard Biener  <rguenther@suse.de>
+	Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/70138
+	* gcc.dg/vect/pr70138-1.c: New testcase.
+	* gcc.dg/vect/pr70138-2.c: Likewise.
+
 2016-03-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/70049
