@@ -1,3 +1,10 @@
+2016-03-09  Richard Biener  <rguenther@suse.de>
+	Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/70138
+	* tree-vect-loop-manip.c (vect_update_ivs_after_vectorizer):
+	Also skip vect_double_reduction_def.
+
 2016-03-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/70049
